# linux-process-hollowing

./: CMakeLists.txt  README.md  discover-jit-processes.py  level1.bash  level1.gdb  level2.bash  level2.gdb  level3.bash  level3.gdb  libc-memory-diff.py  libc-memory-hash.py
src/: hello_shellcode.c  ldscript.txt
